// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adv-bar-chart.vue mounts component and sets prop values 1`] = `
<div
  class="adv-chart-container adv-chart-container--minimum"
  data-j-adv-chart=""
  data-j-chart-container=""
  data-j-single-bar-chart=""
>
  <div
    class="adv-chart__header"
  >
    <!---->
     
    <div
      class="adv-chart__controls"
    />
     
    <!---->
     
    <div
      class="adv-chart-legend adv-chart__legend"
      data-j-chart-legend=""
    >
      <div
        class="adv-chart-legend__item"
        tabindex="0"
      >
        <span
          class="adv-chart-legend__circle adv-background-color--skyblue"
          data-j-chart-legend__circle=""
        />
        
    
  
      </div>
    </div>
  </div>
   
  <svg
    class="adv-chart-container__svg"
    data-j-chart-container__root=""
    height="44"
  >
    <g
      class="adv-chart-container__group"
      data-j-chart-container__group=""
      transform="translate(24, 16)"
    >
       
      <rect
        class="adv-bar adv-fill--negative"
        data-j-adv-chart__negative-values=""
        data-j-bar=""
        height="0"
        transform="translate(0, 0)"
        width="0"
        x="0"
        y="0"
      />
       
      <g
        class="axis"
        data-j-adv-chart__x-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        0
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(91.42857142857143, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        1
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(182.85714285714286, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        2
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(274.2857142857143, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        3
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(365.7142857142857, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        4
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(457.14285714285717, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        5
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(548.5714285714286, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        6
      
            </text>
          </g>
           
          <!---->
        </g>
      </g>
       
      <g
        class="axis"
        data-j-adv-chart__y-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        0
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 40)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        5
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 80)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        10
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 120)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        15
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 160)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        20
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 200)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        25
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 240)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        30
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 280)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        35
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 320)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        40
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 360)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        45
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 400)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        50
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 440)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        55
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 480)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        60
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
      </g>
       
      <g
        class="adv-bar-group"
        containerSize="[object Object]"
        data-j-bars-group=""
        labels="Monday,Tuesday,Wednesday,Thursday,Friday,Saturday,Sunday"
      >
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-80"
            style="transform-origin: 45.714285714285715px 40px;"
            width="61.25714285714285"
            x="15.085714285714289"
            y="80"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--negative adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-320"
            style="transform-origin: 137.14285714285714px -160px;"
            width="61.25714285714285"
            x="106.51428571428572"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-240"
            style="transform-origin: 228.57142857142858px 120px;"
            width="61.25714285714285"
            x="197.94285714285715"
            y="240"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-160"
            style="transform-origin: 320px 80px;"
            width="61.25714285714285"
            x="289.37142857142857"
            y="160"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--negative adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-560"
            style="transform-origin: 411.42857142857144px -280px;"
            width="61.25714285714285"
            x="380.8"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-480"
            style="transform-origin: 502.8571428571429px 240px;"
            width="61.25714285714285"
            x="472.22857142857146"
            y="480"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-400"
            style="transform-origin: 594.2857142857142px 200px;"
            width="61.25714285714285"
            x="563.6571428571428"
            y="400"
          />
        </g>
      </g>
       
      <g
        class="adv-overlay-group"
        data-j-adv-chart__overlay-group=""
      >
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="0"
          data-j-bar=""
          height="480"
          transform="translate(0, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="1"
          data-j-bar=""
          height="480"
          transform="translate(91.42857142857143, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="2"
          data-j-bar=""
          height="480"
          transform="translate(182.85714285714286, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="3"
          data-j-bar=""
          height="480"
          transform="translate(274.2857142857143, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="4"
          data-j-bar=""
          height="480"
          transform="translate(365.7142857142857, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="5"
          data-j-bar=""
          height="480"
          transform="translate(457.14285714285717, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="6"
          data-j-bar=""
          height="480"
          transform="translate(548.5714285714286, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
      </g>
       
      <g>
        <circle
          class="adv-fill--transparent"
          cx="45.714285714285715"
          cy="80"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="137.14285714285714"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="228.57142857142858"
          cy="240"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="320"
          cy="160"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="411.42857142857144"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="502.8571428571429"
          cy="480"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="594.2857142857142"
          cy="400"
          r="1"
        />
      </g>
    </g>
  </svg>
   
  <!---->
   
  <!---->
   
</div>
`;

exports[`adv-bar-chart.vue should display grouped bar chart 1`] = `
<div
  class="adv-chart-container adv-chart-container--minimum"
  data-j-adv-chart=""
  data-j-chart-container=""
  data-j-grouped-bar-chart=""
  type="grouped"
>
  <div
    class="adv-chart__header"
  >
    <!---->
     
    <div
      class="adv-chart__controls"
    />
     
    <!---->
     
    <div
      class="adv-chart-legend adv-chart__legend"
      data-j-chart-legend=""
    >
      <div
        class="adv-chart-legend__item"
        tabindex="0"
      >
        <span
          class="adv-chart-legend__circle adv-background-color--skyblue"
          data-j-chart-legend__circle=""
        />
        
    
  
      </div>
      <div
        class="adv-chart-legend__item"
        tabindex="0"
      >
        <span
          class="adv-chart-legend__circle adv-background-color--royalblue"
          data-j-chart-legend__circle=""
        />
        
    
  
      </div>
    </div>
  </div>
   
  <svg
    class="adv-chart-container__svg"
    data-j-chart-container__root=""
    height="44"
  >
    <g
      class="adv-chart-container__group"
      data-j-chart-container__group=""
      transform="translate(24, 16)"
    >
       
      <!---->
       
      <g
        class="axis"
        data-j-adv-chart__x-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        0
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(91.42857142857143, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        1
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(182.85714285714286, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        2
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(274.2857142857143, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        3
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(365.7142857142857, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        4
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(457.14285714285717, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        5
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(548.5714285714286, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        6
      
            </text>
          </g>
           
          <!---->
        </g>
      </g>
       
      <g
        class="axis"
        data-j-adv-chart__y-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        0
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 40)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        5
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 80)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        10
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 120)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        15
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 160)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        20
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 200)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        25
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 240)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        30
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 280)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        35
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 320)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        40
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 360)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        45
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 400)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        50
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 440)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        55
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 480)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        60
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
      </g>
       
      <g
        class="adv-bar-group"
        containerSize="[object Object]"
        data-j-bars-group=""
        labels="Monday,Tuesday,Wednesday,Thursday,Friday,Saturday,Sunday"
      >
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-1126.8171791573548"
            style="transform-origin: 30.400000000000002px 563.4085895786774px;"
            width="30.628571428571426"
            x="15.085714285714289"
            y="1126.8171791573548"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-6646.485493474192"
            style="transform-origin: 61.028571428571425px 3323.242746737096px;"
            width="30.628571428571426"
            x="45.714285714285715"
            y="6646.485493474192"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-5692.2327818079275"
            style="transform-origin: 121.82857142857144px 2846.1163909039637px;"
            width="30.628571428571426"
            x="106.51428571428572"
            y="5692.2327818079275"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-552.6465531299945"
            style="transform-origin: 152.45714285714286px 276.32327656499723px;"
            width="30.628571428571426"
            x="137.14285714285714"
            y="552.6465531299945"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-5961.224723290164"
            style="transform-origin: 213.25714285714287px 2980.612361645082px;"
            width="30.628571428571426"
            x="197.94285714285715"
            y="5961.224723290164"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-519.6789120974845"
            style="transform-origin: 243.8857142857143px 259.83945604874225px;"
            width="30.628571428571426"
            x="228.57142857142858"
            y="519.6789120974845"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-1439.717437936512"
            style="transform-origin: 304.68571428571425px 719.858718968256px;"
            width="30.628571428571426"
            x="289.37142857142857"
            y="1439.717437936512"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-1459.6502174830803"
            style="transform-origin: 335.3142857142857px 729.8251087415401px;"
            width="30.628571428571426"
            x="320"
            y="1459.6502174830803"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-888.5369775651615"
            style="transform-origin: 396.1142857142857px 444.26848878258073px;"
            width="30.628571428571426"
            x="380.8"
            y="888.5369775651615"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-5744.823968995199"
            style="transform-origin: 426.74285714285713px 2872.4119844975994px;"
            width="30.628571428571426"
            x="411.42857142857144"
            y="5744.823968995199"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-6653.899098054105"
            style="transform-origin: 487.54285714285714px 3326.9495490270524px;"
            width="30.628571428571426"
            x="472.22857142857146"
            y="6653.899098054105"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-3344.5319622809498"
            style="transform-origin: 518.1714285714286px 1672.2659811404749px;"
            width="30.628571428571426"
            x="502.8571428571429"
            y="3344.5319622809498"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-1386.7443981876822"
            style="transform-origin: 578.9714285714285px 693.3721990938411px;"
            width="30.628571428571426"
            x="563.6571428571428"
            y="1386.7443981876822"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-4048.429836972685"
            style="transform-origin: 609.5999999999999px 2024.2149184863424px;"
            width="30.628571428571426"
            x="594.2857142857142"
            y="4048.429836972685"
          />
        </g>
      </g>
       
      <g
        class="adv-overlay-group"
        data-j-adv-chart__overlay-group=""
      >
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="0"
          data-j-bar=""
          height="480"
          transform="translate(0, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="1"
          data-j-bar=""
          height="480"
          transform="translate(91.42857142857143, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="2"
          data-j-bar=""
          height="480"
          transform="translate(182.85714285714286, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="3"
          data-j-bar=""
          height="480"
          transform="translate(274.2857142857143, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="4"
          data-j-bar=""
          height="480"
          transform="translate(365.7142857142857, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="5"
          data-j-bar=""
          height="480"
          transform="translate(457.14285714285717, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="6"
          data-j-bar=""
          height="480"
          transform="translate(548.5714285714286, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
      </g>
       
      <g>
        <circle
          class="adv-fill--transparent"
          cx="45.714285714285715"
          cy="6646.485493474192"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="137.14285714285714"
          cy="5692.2327818079275"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="228.57142857142858"
          cy="5961.224723290164"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="320"
          cy="1459.6502174830803"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="411.42857142857144"
          cy="5744.823968995199"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="502.8571428571429"
          cy="6653.899098054105"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="594.2857142857142"
          cy="4048.429836972685"
          r="1"
        />
      </g>
    </g>
  </svg>
   
  <!---->
   
  <!---->
   
</div>
`;

exports[`adv-bar-chart.vue should display single bar chart 1`] = `
<div
  class="adv-chart-container adv-chart-container--minimum"
  data-j-adv-chart=""
  data-j-chart-container=""
  data-j-single-bar-chart=""
>
  <div
    class="adv-chart__header"
  >
    <!---->
     
    <div
      class="adv-chart__controls"
    />
     
    <!---->
     
    <div
      class="adv-chart-legend adv-chart__legend"
      data-j-chart-legend=""
    >
      <div
        class="adv-chart-legend__item"
        tabindex="0"
      >
        <span
          class="adv-chart-legend__circle adv-background-color--skyblue"
          data-j-chart-legend__circle=""
        />
        
    
  
      </div>
    </div>
  </div>
   
  <svg
    class="adv-chart-container__svg"
    data-j-chart-container__root=""
    height="44"
  >
    <g
      class="adv-chart-container__group"
      data-j-chart-container__group=""
      transform="translate(24, 16)"
    >
       
      <rect
        class="adv-bar adv-fill--negative"
        data-j-adv-chart__negative-values=""
        data-j-bar=""
        height="0"
        transform="translate(0, 0)"
        width="0"
        x="0"
        y="0"
      />
       
      <g
        class="axis"
        data-j-adv-chart__x-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        0
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(91.42857142857143, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        1
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(182.85714285714286, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        2
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(274.2857142857143, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        3
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(365.7142857142857, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        4
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(457.14285714285717, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        5
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(548.5714285714286, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="91.42857142857143"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="45.714285714285715"
              y="8"
            >
              
        6
      
            </text>
          </g>
           
          <!---->
        </g>
      </g>
       
      <g
        class="axis"
        data-j-adv-chart__y-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        0
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 40)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        5
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 80)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        10
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 120)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        15
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 160)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        20
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 200)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        25
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 240)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        30
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 280)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        35
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 320)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        40
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 360)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        45
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 400)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        50
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 440)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        55
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 480)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        60
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
      </g>
       
      <g
        class="adv-bar-group"
        containerSize="[object Object]"
        data-j-bars-group=""
        labels="Monday,Tuesday,Wednesday,Thursday,Friday,Saturday,Sunday"
      >
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-80"
            style="transform-origin: 45.714285714285715px 40px;"
            width="61.25714285714285"
            x="15.085714285714289"
            y="80"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--negative adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-320"
            style="transform-origin: 137.14285714285714px -160px;"
            width="61.25714285714285"
            x="106.51428571428572"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-240"
            style="transform-origin: 228.57142857142858px 120px;"
            width="61.25714285714285"
            x="197.94285714285715"
            y="240"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-160"
            style="transform-origin: 320px 80px;"
            width="61.25714285714285"
            x="289.37142857142857"
            y="160"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--negative adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-560"
            style="transform-origin: 411.42857142857144px -280px;"
            width="61.25714285714285"
            x="380.8"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-480"
            style="transform-origin: 502.8571428571429px 240px;"
            width="61.25714285714285"
            x="472.22857142857146"
            y="480"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="-400"
            style="transform-origin: 594.2857142857142px 200px;"
            width="61.25714285714285"
            x="563.6571428571428"
            y="400"
          />
        </g>
      </g>
       
      <g
        class="adv-overlay-group"
        data-j-adv-chart__overlay-group=""
      >
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="0"
          data-j-bar=""
          height="480"
          transform="translate(0, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="1"
          data-j-bar=""
          height="480"
          transform="translate(91.42857142857143, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="2"
          data-j-bar=""
          height="480"
          transform="translate(182.85714285714286, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="3"
          data-j-bar=""
          height="480"
          transform="translate(274.2857142857143, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="4"
          data-j-bar=""
          height="480"
          transform="translate(365.7142857142857, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="5"
          data-j-bar=""
          height="480"
          transform="translate(457.14285714285717, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="6"
          data-j-bar=""
          height="480"
          transform="translate(548.5714285714286, 0)"
          width="91.42857142857143"
          x="0"
          y="0"
        />
      </g>
       
      <g>
        <circle
          class="adv-fill--transparent"
          cx="45.714285714285715"
          cy="80"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="137.14285714285714"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="228.57142857142858"
          cy="240"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="320"
          cy="160"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="411.42857142857144"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="502.8571428571429"
          cy="480"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="594.2857142857142"
          cy="400"
          r="1"
        />
      </g>
    </g>
  </svg>
   
  <!---->
   
  <!---->
   
</div>
`;

exports[`adv-bar-chart.vue should display stacked bar chart 1`] = `
<div
  class="adv-chart-container adv-chart-container--minimum"
  data-j-adv-chart=""
  data-j-chart-container=""
  data-j-stacked-bar-chart=""
  type="stacked"
>
  <div
    class="adv-chart__header"
  >
    <!---->
     
    <div
      class="adv-chart__controls"
    />
     
    <!---->
     
    <div
      class="adv-chart-legend adv-chart__legend"
      data-j-chart-legend=""
    >
      <div
        class="adv-chart-legend__item"
        tabindex="0"
      >
        <span
          class="adv-chart-legend__circle adv-background-color--skyblue"
          data-j-chart-legend__circle=""
        />
        
    
  
      </div>
      <div
        class="adv-chart-legend__item"
        tabindex="0"
      >
        <span
          class="adv-chart-legend__circle adv-background-color--royalblue"
          data-j-chart-legend__circle=""
        />
        
    
  
      </div>
    </div>
  </div>
   
  <svg
    class="adv-chart-container__svg"
    data-j-chart-container__root=""
    height="44"
  >
    <g
      class="adv-chart-container__group"
      data-j-chart-container__group=""
      transform="translate(24, 16)"
    >
       
      <!---->
       
      <g
        class="axis"
        data-j-adv-chart__x-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="0"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="0"
              y="8"
            >
              
        Monday
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="0"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="0"
              y="8"
            >
              
        Tuesday
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="0"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="0"
              y="8"
            >
              
        Wednesday
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="0"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="0"
              y="8"
            >
              
        Thursday
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="0"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="0"
              y="8"
            >
              
        Friday
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="0"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="0"
              y="8"
            >
              
        Saturday
      
            </text>
          </g>
           
          <!---->
        </g>
        <g
          class="axis__tick axis__tick--hidden"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
              height="28"
              width="0"
            />
             
            <text
              class="axis__label"
              dy="0.8em"
              text-anchor="middle"
              x="0"
              y="8"
            >
              
        Sunday
      
            </text>
          </g>
           
          <!---->
        </g>
      </g>
       
      <g
        class="axis"
        data-j-adv-chart__y-axis=""
        data-j-axis=""
        transform="translate(0, 0)"
      >
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        1200
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        1100
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        1000
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        900
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        800
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        700
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        600
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        500
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        400
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        300
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        200
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        100
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
        <g
          class="axis__tick"
          data-j-axis__tick=""
          transform="translate(0, 0)"
        >
          <g
            class="axis__tick-label"
            data-j-axis__tick-label=""
            pointer-events="all"
          >
            <rect
              class="axis__ghost"
            />
             
            <text
              class="axis__label"
              dy="0.4em"
              text-anchor="end"
              x="-8"
            >
              
        0
      
            </text>
          </g>
           
          <line
            class="axis__grid-line"
            x1="0"
          />
        </g>
      </g>
       
      <g
        class="adv-bar-group"
        containerSize="[object Object]"
        data-j-bars-group=""
        labels="Monday,Tuesday,Wednesday,Thursday,Friday,Saturday,Sunday"
      >
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
        </g>
        <g>
          <rect
            class="adv-bar adv-fill--skyblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            class="adv-bar adv-fill--royalblue adv-bar--transition-height"
            data-j-adv-bar=""
            data-j-bar=""
            height="0"
            style="transform-origin: 0px 0px;"
            width="0"
            x="0"
            y="0"
          />
        </g>
      </g>
       
      <g
        class="adv-overlay-group"
        data-j-adv-chart__overlay-group=""
      >
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="0"
          data-j-bar=""
          height="0"
          transform="translate(0, 0)"
          width="0"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="1"
          data-j-bar=""
          height="0"
          transform="translate(0, 0)"
          width="0"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="2"
          data-j-bar=""
          height="0"
          transform="translate(0, 0)"
          width="0"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="3"
          data-j-bar=""
          height="0"
          transform="translate(0, 0)"
          width="0"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="4"
          data-j-bar=""
          height="0"
          transform="translate(0, 0)"
          width="0"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="5"
          data-j-bar=""
          height="0"
          transform="translate(0, 0)"
          width="0"
          x="0"
          y="0"
        />
        <rect
          class="adv-bar adv-fill--transparent"
          data-j-adv-overlay-group="6"
          data-j-bar=""
          height="0"
          transform="translate(0, 0)"
          width="0"
          x="0"
          y="0"
        />
      </g>
       
      <g>
        <circle
          class="adv-fill--transparent"
          cx="0"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="0"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="0"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="0"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="0"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="0"
          cy="0"
          r="1"
        />
        <circle
          class="adv-fill--transparent"
          cx="0"
          cy="0"
          r="1"
        />
      </g>
    </g>
  </svg>
   
  <!---->
   
  <!---->
   
</div>
`;
